Smart Home Automation System

--- a/Task-6/index.html
+++ b/Task-6/index.html
@@ -28,9 +28,13 @@
 
         <section id="camera">
             <h2>Camera</h2>
-            <img src="" alt="Camera Feed" id="cameraFeed">
+            <video id="cameraFeed" width="400" height="300" autoplay playsinline></video>
             <p id="cameraFeedback"></p>
+            <button id="startCamera">Start Camera</button>
+            <button id="captureImage">Capture Image</button>
         </section>
+    
+        <script src="camera.js"></script>
 
         <section id="security">
             <h2>Security System</h2>
